--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "portfolio-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/VascoMiguens/portfolio-react",
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.3.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,7 +16,6 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-
   },
   "scripts": {
     "start": "react-scripts start",
