--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-react",
+  "name": "Vasco Miguens",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/VascoMiguens/portfolio-react",
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.2.3",
+    "gh-pages": "^5.0.0",
     "lottie-react": "^2.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.2",
@@ -18,10 +19,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
