--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Vasco Miguens",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://VascoMiguens.github.io/portfolio-react/#",
+  "homepage": "https://VascoMiguens.github.io/portfolio-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
