--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "homepage": "https://VascoMiguens.github.io/portfolio-react/",
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "^5.2.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.3",
     "gh-pages": "^5.0.0",
     "lottie-react": "^2.3.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.3.1",
+    "react-intersection-observer": "^9.4.3",
+    "react-particles": "^2.9.3",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
